fix: update title in transactions ledger and remove cash availability display

--- a/app/templates/bank_transaction_ledger/index.html
+++ b/app/templates/bank_transaction_ledger/index.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 
-{% block title %}Cash Ledger{% endblock %}
+{% block title %}Transactions Ledger{% endblock %}
 
 {% block content %}
 
@@ -57,8 +57,6 @@
                 </tbody>
             </table>
         </div>
-
-        <p>Available Cash: {{ sum_result }}</p>
     </div>
 
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
