--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -46,6 +46,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('cashledger.index' ) }}">Cash</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('debt.index' ) }}">Accounts Payable</a>
+                    </li>
                 </ul>
             </div>
         </div>
